--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body style="background-image: url('logo.png');background-repeat: no-repeat;">
 	<div style="width: 100%">
 	<div style="width:20%;display: flex;flex-direction: column;margin: auto">
-		<h2>Calcalatore orario di uscita</h2>
+		<h2>Calcola l'orario di uscita</h2>
 		<label style="margin-top: 10px">Orario di ingresso</label>
 		<input id="hour" type="time" name="hour">
 
