--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Cartellino</title>
 </head>
-<body style="background-image: url('logo.png');background-repeat: no-repeat;">
+<body>
 	<div style="width: 100%">
 	<div style="width:20%;display: flex;flex-direction: column;margin: auto">
 		<h2>Calcola l'orario di uscita</h2>
